<resources>
    <string name="app_name">FabCatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="connectivity">Connectivity</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="home">Home</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="fab_cat_app">FabCat app</string>
    <string name="brought_to_you_by_sintuz_amp_fedeb"><![CDATA[Brought to you by Sintuz & Fedeb]]></string>
    <string name="reset">Reset</string>
    <string name="configuration">Settings</string>
    <string name="cat">Cat</string>
    <string name="motors">Motors</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="neck">Neck</string>
    <string name="motorPosition">%d</string>
    <string name="_90">90</string>
    <string name="front_right_shoulder">Front right shoulder</string>
    <string name="front_left_shoulder">Front left shoulder</string>
    <string name="front_left_knee">Front left knee</string>
    <string name="front_right_knee">Front right knee</string>
    <string name="_50">50</string>
    <string name="_120">120</string>
    <string name="back_left_shoulder">Back left shoulder</string>
    <string name="back_left_knee">Back left knee</string>
    <string name="back_right_knee">Back right knee</string>
    <string name="back_right_shoulder">Back right shoulder</string>
    <string name="positions">Positions</string>
    <string name="scan_devices">Scan devices</string>
    <string name="start_position">Start position</string>
    <string name="shutdown">Shutdown</string>
    <string name="calibration_position">Calibration position</string>
    <string name="all_motors_90_degrees">All motors 90 degrees</string>
    <string name="straight_leg">Straight leg</string>
    <string name="crouched_position">Crouched position</string>
    <string name="logo_maker_station">Logo MakerStation</string>
    <string name="OFF">OFF</string>
    <string name="cat_parameters">Cat parameters</string>
    <string name="delay_pitch_roll_ms">Delay pitch roll (ms)</string>
    <string name="bluetooth_discovery_countdown_s">Bluetooth discovery countdown (s)</string>
    <string name="debug">Debug</string>
    <string name="functions">Functions</string>
    <string name="pitch_roll">Pitch/Roll</string>
    <string name="auto_balance">Auto balance</string>
    <string name="fall_recovery">Fall recovery</string>
    <string name="meow">Meow</string>
    <string name="cat_image">Cat image</string>
    <string name="roll">Roll</string>
    <string name="pitch">Pitch</string>
    <string name="scan_complete">Scan complete</string>
    <string name="countdown_one">%d second left</string>
    <string name="countdown_other">%d seconds left</string>
    <string name="logo">Logo</string>
    <string name="disconnect">Disconnect</string>
    <string name="exception">Cause: %s \n Stack: %s</string>
    <string name="empty_string_int">%d</string>
    <string name="empty_string_string">%s</string>
    <string name="version_string">Version: %s beta</string>
    <string name="version">Version</string>
    <string name="head_motor">Head %d</string>
    <string name="neck_motor">Neck %d</string>
    <string name="tail_motor">Tail %d</string>
    <string name="front_left_shoulder_motor">Front left shoulder %d</string>
    <string name="front_right_shoulder_motor">Front right shoulder %d</string>
    <string name="front_left_knee_motor">Front left knee %d</string>
    <string name="front_right_knee_motor">Front right knee %d</string>
    <string name="back_left_shoulder_motor">Back left shoulder %d</string>
    <string name="back_right_shoulder_motor">Back right shoulder %d</string>
    <string name="back_left_knee_motor">Back left knee %d</string>
    <string name="back_right_knee_motor">Back right knee %d</string>
    <string name="head_motor_off">Head OFF</string>
    <string name="neck_motor_off">Neck OFF</string>
    <string name="tail_motor_off">Tail OFF</string>
    <string name="front_left_shoulder_motor_off">Front left shoulder OFF</string>
    <string name="front_right_shoulder_motor_off">Front right shoulder OFF</string>
    <string name="front_left_knee_motor_off">Front left knee OFF</string>
    <string name="front_right_knee_motor_off">Front right knee OFF</string>
    <string name="back_left_shoulder_motor_off">Back left shoulder OFF</string>
    <string name="back_right_shoulder_motor_off">Back right shoulder OFF</string>
    <string name="back_left_knee_motor_off">Back left knee OFF</string>
    <string name="back_right_knee_motor_off">Back right knee OFF</string>
    <string name="walk">Walk</string>
    <string name="wave">Wave</string>
    <string name="sit">Sit</string>
    <string name="tail_sit">Tail sit</string>
    <string name="connections">Connections</string>
    <string name="dark_theme">Dark theme</string>
    <string name="check_the_app_s_repository_on_github">Check the app\'s repository on GitHub</string>
    <string name="info">Info</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="about_us">About us</string>
    <string name="_1x">1x</string>
    <string name="_2x">2x</string>
    <string name="_4x">4x</string>
    <string name="multiplier">Multiplier</string>
    <string name="build">Build</string>
    <string name="cancel_discovery">Cancel discovery</string>
    <string name="connecting">Connecting…</string>
</resources>
